# pacman-bintrans

./: Cargo.toml  README.md
.github/workflows/: rust.yml
pacman-bintrans-common/: Cargo.toml
pacman-bintrans-common/src/: decompress.rs  http.rs  lib.rs  ui.rs
pacman-bintrans-monitor/: Cargo.toml
pacman-bintrans-monitor/src/: main.rs
pacman-bintrans-sign/: Cargo.toml
pacman-bintrans-sign/migrations/2021-08-21-161318_init/: down.sql  up.sql
pacman-bintrans-sign/src/: archlinux.rs  db.rs  decompress.rs  main.rs  migrations.rs  schema.rs
src/: args.rs  http.rs  lib.rs  main.rs  proof.rs  reproducible.rs
test_data/: rebuilderd-0.18.1-1-x86_64.pkg.tar.zst
