[package]
name = "pacman-bintrans"
version = "0.1.0"
authors = ["kpcyrd <git@rxv.cc>"]
edition = "2018"

[workspace]
members = ["pacman-bintrans-sign",
           "pacman-bintrans-monitor",
           "pacman-bintrans-common"]

[dependencies]
pacman-bintrans-common = { version = "0.1.0", path = "pacman-bintrans-common" }
env_logger = "0.9"
structopt = "0.3.16"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread"] }
futures-util = "0.3.5"
toml = "0.5.6"
serde = "1.0.115"
tempfile = "3.2.0"
minisign = "0.6.3"
url = "2.2.2"
sha2 = "0.9.5"
hex = "0.4.3"
