[package]
name = "pacman-bintrans"
version = "0.4.0"
description = "Binary transparency for pacman"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/pacman-bintrans"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[workspace]
members = ["pacman-bintrans-sign",
           "pacman-bintrans-monitor",
           "pacman-bintrans-common"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3.5"
hex = "0.4.3"
indicatif = "0.17"
minisign = "0.7"
pacman-bintrans-common = { version = "0.4", path = "pacman-bintrans-common" }
rebuilderd-common = "0.20"
serde = "1.0.115"
serde_json = "1.0.73"
sha2 = "0.10"
tar = "0.4.38"
tempfile = "3.2.0"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "time"] }
toml = "0.8"
url = "2.2.2"
