[package]
name = "pacman-bintrans-common"
version = "0.1.0"
description = "Binary transparency for pacman - common code"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/pacman-bintrans"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
futures-util = "0.3.16"
indicatif = "0.16.2"
log = "0.4.11"
reqwest = { version = "0.11", features=["stream", "socks"] }
