[package]
name = "pacman-bintrans-monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
pacman-bintrans-common = { version = "0.1.0", path = "../pacman-bintrans-common" }
tokio = { version = "1.10.0", features = ["process", "macros", "rt-multi-thread"] }
