[package]
name = "pacman-bintrans-monitor"
version = "0.3.0"
description = "Binary transparency for pacman - monitor tools"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/pacman-bintrans"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
pacman-bintrans-common = { version = "0.3", path = "../pacman-bintrans-common" }
structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["process", "macros", "rt-multi-thread"] }
