[package]
name = "pacman-bintrans-monitor"
version = "0.4.0"
description = "Binary transparency for pacman - monitor tools"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/pacman-bintrans"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.11"
pacman-bintrans-common = { version = "0.4", path = "../pacman-bintrans-common" }
tokio = { version = "1.10.0", features = ["process", "macros", "rt-multi-thread"] }
